add permission and fix user interface
